--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <p class="head">Sampriti's Birthday</p>
+  <p class="head">Kajori's Birthday</p>
   <div class="row" id="Left">
     <div class="col-xs-3" id="day"></div>
     <div class="col-xs-3" id="hour"></div>
